--- a/frontend/src/views/layouts/auth.njk
+++ b/frontend/src/views/layouts/auth.njk
@@ -7,7 +7,7 @@
     <!-- Title -->
     <title>NexoLocal Authentication</title>
     <!-- Icon -->
-    <link rel="icon" href="/public/img/logo.png" />
+    <link rel="icon" href="/public/img/logo.svg" />
     <!-- JS -->
     <!--<script src="https://cdn.tailwindcss.com"></script>-->
     <!-- CSS -->
