--- a/frontend/src/views/auth/reset_password_sent.njk
+++ b/frontend/src/views/auth/reset_password_sent.njk
@@ -8,7 +8,7 @@
 
     <div class="flex flex-col items-center mb-10">
         <div class="w-24 h-24 rounded-2xl flex items-center justify-center mb-4">
-            <img src="/public/img/logo.png">
+            <img src="svg">
         </div>
         <h1 class="text-2xl font-bold tracking-tight uppercase">Nexo<span class="text-(--accent)">Local</span></h1>
     </div>
