--- a/frontend/src/views/components/dashboard-sidebar.njk
+++ b/frontend/src/views/components/dashboard-sidebar.njk
@@ -4,7 +4,7 @@
     <div class="h-20 flex items-center px-4 mb-2 shrink-0">
         <div class="flex items-center gap-3">
             <div class="w-11 h-11 rounded-xl flex items-center justify-center bg-(--accent)/10">
-                <img src="/public/img/logo.png" alt="logo" />
+                <img src="/public/img/logo.svg" alt="logo" />
             </div>
             <span class="font-bold text-xl tracking-tight sidebar-text text-white">Nexo<span
                     class="text-(--accent)">Local</span></span>
