--- a/frontend/src/views/layouts/main.njk
+++ b/frontend/src/views/layouts/main.njk
@@ -7,7 +7,7 @@
   <!-- Title -->
   <title>{% block title %}NexoLocal{% endblock %}</title>
   <!-- Icon -->
-  <link rel="icon" href="/public/img/logo.png" />
+  <link rel="icon" href="/public/img/logo.svg" />
   <!-- JS -->
   <!--<script src="https://cdn.tailwindcss.com"></script>-->
   <link rel="stylesheet" href="/public/css/all.css" />
