--- a/frontend/src/views/components/loader.njk
+++ b/frontend/src/views/components/loader.njk
@@ -12,14 +12,19 @@
     }
 
     .spinner-wrapper {
+        position: relative;
         width: 180px;
         height: 180px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-
 
     .logo-center {
         position: absolute;
         z-index: 10;
+        inset: 0;
+        margin: auto;
         width: 130px;
         height: 130px;
         object-fit: contain;
@@ -54,7 +59,6 @@
     <div class="absolute w-125 h-125 bg-orange-600/5 blur-[120px] rounded-full pointer-events-none"></div>
 
     <div class="spinner-wrapper">
-
         <img src="/public/img/logo.svg" alt="Logo" class="logo-center">
         <span id="fallback-text" class="hidden text-orange-500 font-bold text-xl z-20">NEXOLOCAL</span>
     </div>
