--- a/backend/services/email/templates/auth/welcome.html
+++ b/backend/services/email/templates/auth/welcome.html
@@ -20,7 +20,7 @@
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0">
                                 <tr>
                                     <td style="padding-right:10px;">
-                                        <img src="https://nexolocal.floua.app/public/img/logo.svg" alt="NexoLocal Logo"
+                                        <img src="https://nexolocal.floua.app/public/img/logo.png" alt="NexoLocal Logo"
                                             width="72" style="display:block;">
                                     </td>
                                     <td style="font-size:36px; font-weight:700; color:#F0F6FC;">
