--- a/frontend/src/views/companies/finance/create.njk
+++ b/frontend/src/views/companies/finance/create.njk
@@ -106,7 +106,8 @@
                                     <span id="symbol"
                                         class="text-4xl font-black text-(--accent) transition-colors duration-500">S/</span>
                                 </div>
-                                <input type="number" step="0.01" id="amount" name="amount" required
+                                <input type="text" pattern="-?[0-9]*[.,]?[0-9]{0,2}" step="0.01" id="amount"
+                                    name="amount" required
                                     class="w-full bg-transparent text-5xl font-black pl-16 pr-6 py-8 border-b-2 border-white/5 focus:outline-none transition-all duration-500 placeholder:text-white/10"
                                     placeholder="0.00" value="{{ amount }}">
                             </div>
@@ -317,6 +318,19 @@
             subcategory_wrapper.classList.add("hidden");
             subcategory_input.value = "";
         }
+    });
+
+    document.getElementById("amount").addEventListener("input", (e) => {
+        let v = e.target.value;
+
+        // solo un -
+        if (v.indexOf("-") > 0) {
+            e.target.value = v.replace(/-/g, "");
+            return;
+        }
+
+        // normalizar coma a punto
+        e.target.value = v.replace(",", ".");
     });
 </script>
 
