--- a/frontend/src/views/components/dashboard-sidebar.njk
+++ b/frontend/src/views/components/dashboard-sidebar.njk
@@ -2,13 +2,13 @@
     class="shrink-0 w-72 bg-[#0D1117] border-r border-[#30363D] fixed inset-y-0 left-0 z-50 lg:relative lg:translate-x-0 -translate-x-full flex flex-col">
 
     <div class="h-20 flex items-center px-4 mb-2 shrink-0">
-        <div class="flex items-center gap-3">
+        <a href="/platform" class="flex items-center gap-3">
             <div class="w-11 h-11 rounded-xl flex items-center justify-center bg-(--accent)/10">
                 <img src="/public/img/logo.svg" alt="logo" />
             </div>
             <span class="font-bold text-xl tracking-tight sidebar-text text-white">Nexo<span
                     class="text-(--accent)">Local</span></span>
-        </div>
+        </a>
     </div>
 
     {% if user_companies | length > 0 %}
@@ -85,7 +85,7 @@
         <h4 class="sidebar-text sidebar-section-title">Platform</h4>
         <div class="space-y-1">
             {% if "platform.dashboard.view" in permissions %}
-            <a href="/"
+            <a href="/platform"
                 class="flex items-center gap-4 px-4 py-3 rounded-xl text-gray-400 hover:bg-[#161B22] hover:text-white transition-all group">
                 <i class="fa-jelly fa-regular fa-grid text-xl"></i>
                 <span class="sidebar-text">Dashboard</span>
