--- a/frontend/src/views/companies/products/create.njk
+++ b/frontend/src/views/companies/products/create.njk
@@ -33,8 +33,7 @@
             </nav>
         </div>
 
-        <div
-            class="my-5 p-6 glass-card rounded-2xl flex flex-col md:flex-row justify-between items-center gap-6">
+        <div class="my-5 p-6 glass-card rounded-2xl flex flex-col md:flex-row justify-between items-center gap-6">
             <div class="flex items-start gap-4">
                 <div class="p-3 bg-(--accent)/10 rounded-xl">
                     <i class="fas fa-boxes-stacked text-(--accent) text-xl"></i>
@@ -81,15 +80,31 @@
                         <div class="space-y-2 hidden">
                             <label class="text-xs font-bold text-gray-500 uppercase ml-1">Categoría</label>
                             <select
-                                class="w-full input-glass mt-2 px-5 py-3.5 rounded-xl text-sm font-bold appearance-none"
+                                class="w-full input-glass mt-2 px-5 py-3.5 mt-2 rounded-xl text-sm font-bold appearance-none"
                                 name="category" required>
                                 <option class="input-field" value="no_category">Sin categoría</option>
                             </select>
                         </div>
                         <div class="md:col-span-2 space-y-2">
-                            <label class="text-xs font-bold text-gray-500 uppercase ml-1">Descripción Corta</label>
+                            <label class="text-xs font-bold text-gray-500 uppercase ml-1">Descripción (Opcional)</label>
                             <textarea rows="2" class="w-full input-glass mt-2 px-5 py-3.5 rounded-xl text-sm font-bold"
                                 placeholder="Detalles..." name="description" value="{{ description }}"></textarea>
+                        </div>
+                        <div class="md:col-span-2 space-y-2">
+                            <label class="text-xs font-bold text-gray-500 uppercase ml-1">Provedor (Opcional)
+                                <span
+                                    class="ml-2 text-[10px] font-bold tracking-wider px-2 py-0.5 rounded-full text-white shadow-md group-hover:scale-105 badge badge-premium transition">Nueva
+                                    Opcion</span>
+                            </label>
+                            <select
+                                class="w-full input-glass px-5 py-3.5 mt-2 rounded-xl text-sm font-bold appearance-none"
+                                name="supplier_id" required>
+                                <option class="input-field" value="none">seleccionar Provedor</option>
+                                {% for supplier in suppliers %}
+                                <option class="input-field" value="{{ supplier.id }}" {% if supplier.id == supplier_id %}
+                                    selected {% endif %}>{{ supplier.name }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                     </div>
                 </section>
@@ -168,7 +183,8 @@
                     </div>
 
                     <div id="serviceOptions"
-                        class="{% if not is_service %} hidden {% else %} grid {% endif %} grid-cols-1 gap-6 pt-4 border-t border-white/5 transition-all-custom"> {# md:grid-cols-2 #}
+                        class="{% if not is_service %} hidden {% else %} grid {% endif %} grid-cols-1 gap-6 pt-4 border-t border-white/5 transition-all-custom">
+                        {# md:grid-cols-2 #}
                         <div class="space-y-2 col-span-2">
                             <label class="text-xs font-bold text-gray-500 uppercase ml-1">Tipo de Duración</label>
                             <select
@@ -250,7 +266,7 @@
                         <hr class="border-white/5" />
                         <div class="space-y-2">
                             <label class="text-xs font-bold text-gray-500 uppercase ml-1">Bonificación de
-                                Productos</label>
+                                Productos (Opcional)</label>
                             <input type="number"
                                 class="w-full input-glass mt-2 px-5 py-3.5 rounded-xl text-sm font-bold" placeholder="0"
                                 name="bonus" value="{{ bonus }}" step="0.001" min="0">
@@ -267,7 +283,7 @@
                     <div class="space-y-4">
                         <div class="space-y-2">
                             <label class="text-[10px] font-bold text-gray-500 uppercase ml-1">Fecha de
-                                Expiración</label>
+                                Expiración (Opcional)</label>
                             <input type="date" class="w-full input-glass mt-2 px-5 py-3.5 rounded-xl text-sm text-white"
                                 name="expiration_date" value="{{ date_val }}">
                         </div>
@@ -279,7 +295,7 @@
 
                 <section class="glass-card p-8 no_service_section {% if is_service %} hidden {% endif %}">
                     <h3 class="text-sm font-bold mb-6 flex items-center gap-2">
-                        <i class="fas fa-ruler-combined text-gray-500"></i> Logística
+                        <i class="fas fa-ruler-combined text-gray-500"></i> Logística - Opcional
                     </h3>
                     <div class="space-y-5">
                         <div class="space-y-2" id="weight_section">
