--- a/frontend/src/views/layouts/main.njk
+++ b/frontend/src/views/layouts/main.njk
@@ -9,11 +9,13 @@
   <!-- Icon -->
   <link rel="icon" href="/public/img/logo.svg" />
   <!-- JS -->
-  <!--<script src="https://cdn.tailwindcss.com"></script>-->
   <link rel="stylesheet" href="/public/css/all.css" />
   <!-- CSS -->
   <link rel="stylesheet" href="/public/css/animations.css" />
   <link rel="stylesheet" href="/public/css/tailwind.build.css" />
+
+  <!-- Logo - Img -->
+  <link rel="preload" href="/public/img/logo.svg" as="image">
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
