--- a/frontend/src/views/platform/users/read.njk
+++ b/frontend/src/views/platform/users/read.njk
@@ -13,7 +13,7 @@
                 aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1 md:space-x-3 uppercase">
                     <li class="inline-flex items-center">
-                        <a href="/" class="hover:text-white transition-colors">Dashboard</a>
+                        <a href="/platform" class="hover:text-white transition-colors">Dashboard</a>
                     </li>
                     <li>
                         <div class="flex items-center">
