--- a/frontend/src/views/layouts/auth.njk
+++ b/frontend/src/views/layouts/auth.njk
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Title -->
-    <title>NexoLocal Authentication</title>
+    <title>Authentication | Nexolocal</title>
     <!-- Icon -->
-    <link rel="icon" href="/public/img/logo.svg" />
-    <!-- JS -->
-    <!--<script src="https://cdn.tailwindcss.com"></script>-->
+    <link rel="icon" href="/public/img/logo.png" />
+    <!-- Meta -->
+    <meta name="robots" content="noindex, nofollow">
     <!-- CSS -->
     <link rel="stylesheet" href="/public/css/animations.css" />
     <link rel="stylesheet" href="/public/css/tailwind.build.css" />
