--- a/frontend/src/views/layouts/dashboard.njk
+++ b/frontend/src/views/layouts/dashboard.njk
@@ -5,25 +5,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Title -->
-  <title>{% block title %}NexoLocal{% endblock %}</title>
+  <title>{% block title %}Panel | NexoLocal{% endblock %}</title>
   <!-- Icon -->
-  <link rel="icon" href="/public/img/logo.svg" />
-  <!-- JS -->
-  <link rel="stylesheet" href="/public/css/all.css" />
+  <link rel="icon" href="/public/img/logo.png" />
+  <!--Meta-->
+  <meta name="robots" content="noindex, nofollow">
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- CSS -->
+  <link rel="stylesheet" href="/public/css/all.css" />
   <link rel="stylesheet" href="/public/css/animations.css" />
   <link rel="stylesheet" href="/public/css/tailwind.build.css" />
 
   <!-- Logo - Img -->
   <link rel="preload" href="/public/img/logo.svg" as="image">
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body class="overflow-x-hidden overflow-y-auto">
   {% include "components/loader.njk" %}
 
-  <div class="flex h-screen w-full relative"> 
+  <div class="flex h-screen w-full relative">
     {# min-h-screen #}
     {% include "components/notifications.njk" %}
     {% block content %}
